terraform/kubernetes/cluster-policies/kyverno/shared/namespace-default-deny.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: default-deny-namespaces
spec:
  admission: true
  background: true
  generateExisting: true
  validationFailureAction: Audit
  rules:
    - name: add-default-deny-netpol
      skipBackgroundRequests: false
      match:
        any:
          - resources:
              kinds:
                - Namespace
              selector:
                matchLabels:
                  kyverno.io/isolate: "true"
      generate:
        apiVersion: networking.k8s.io/v1
        kind: NetworkPolicy
        name: default-deny
        namespace: "{{request.object.metadata.name}}"
        synchronize: true
        data:
          apiVersion: networking.k8s.io/v1
          kind: NetworkPolicy
          metadata:
            name: default-deny
          spec:
            podSelector: {}
            policyTypes:
              - Ingress
              - Egress
