terraform/kubernetes/cluster-policies/kyverno/shared/protect-default-deny.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: protect-default-deny-netpol
spec:
  admission: true
  background: false
  emitWarning: false
  validationFailureAction: Enforce
  rules:
    - name: block-delete-default-deny-netpol
      match:
        any:
          - resources:
              kinds:
                - NetworkPolicy
              names:
                - default-deny
              operations:
                - DELETE
              namespaceSelector:
                matchLabels:
                  kyverno.io/isolate: "true"
      exclude:
        any:
          - subjects:
              - kind: User
                name: system:kube-controller-manager
              - kind: ServiceAccount
                name: namespace-controller
                namespace: kube-system
      skipBackgroundRequests: true
      validate:
        message: default-deny NetworkPolicy is managed by Kyverno and cannot be deleted in isolated namespaces.
        allowExistingViolations: true
        deny: {}
