terraform/kubernetes/cluster-policies/kyverno/shared/test-generated-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: isolated-demo
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
