terraform/kubernetes/cluster-policies/kyverno/shared/test-restrict-image-registries-resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed-image
  namespace: dev
spec:
  containers:
    - name: app
      image: quay.io/cilium/cilium:v1.19.1
---
apiVersion: v1
kind: Pod
metadata:
  name: blocked-image
  namespace: dev
spec:
  containers:
    - name: app
      image: registry.example.invalid/demo:v1
