terraform/kubernetes/cluster-policies/kyverno/shared/test-verify-local-registry-signatures-resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: public-registry-image
  namespace: dev
spec:
  containers:
    - name: app
      image: quay.io/cilium/cilium:v1.19.1
---
apiVersion: v1
kind: Pod
metadata:
  name: local-registry-image
  namespace: dev
spec:
  containers:
    - name: app
      image: host.docker.internal:5002/platform/sentiment-api:latest
